k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: 'ghcr.io/ba055482/hua-api:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sqlvolume
              mountPath: "/sql"
              readOnly: true
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      volumes:
        - name: sqlvolume
          secret:
            secretName: hua-secret-sql
            items:
              - key: init.sql
                path: initdb.sql
