k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - name: ui
          image: 'ba055482/hua-ui:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
