k8s/ui-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-clip
spec:
  type: LoadBalancer
  selector:
    component: ui
  ports:
    - port: 80
      targetPort: 80
      name: ui
      protocol: TCP
