k8s/ui-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ing-ssl
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: "huademo.gotdns.ch"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-clip
            port:
              number: 80
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-clip
            port:
              number: 8080
  tls:
  - hosts:
    - huademo.gotdns.ch
    secretName: hua-cert-prod
