k8s/ui-ingress.yaml
# required for http, skip otherwise
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ing
spec:
  rules:
    - host: "huademo.gotdns.ch"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ui-clip
                port:
                  name: ui
